[package]
name = "erreport"
description = "A Result helper for Rust"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = []
documentation = "https://docs.rs/erreport"
repository = "https://github.com/qdwang/erreport"

[dependencies]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
